--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.html
@@ -43,7 +43,8 @@
         </div>
       </div>
       <!--------------------packages-title -------------------->
-      <div class="packages-titles line">
+      <div class="packages-titles line" outsideTooltip="Заголовок" outsideTooltipDescription="Дайте вашему пакету броский заголовок, который описывает, что он включает.
+      Например: 2D или 3D обложка, версия для печати" placement="right">
         <div class="packages-title title">
           <p>Название услуги</p>
 
@@ -59,7 +60,9 @@
 
       </div>
       <!-------------------- Descriptions -------------------->
-      <div class="packages-description line">
+      <div class="packages-description line" outsideTooltip="Описание" outsideTooltipDescription="Подведите итог, что этот пакет предлагает покупателям, и почему вы включили эти предметы в свой пакет.
+      Вы можете использовать максимум 100 символов.
+      Например: этот пакет «Полный дизайн логотипа» включает в себя стандартный дизайн логотипа с 4 ревизиями и исходный файл." placement="right">
         <div class="description-title">
           <p>
             Краткое описание
@@ -71,7 +74,8 @@
         </div>
       </div>
       <!--------------------Time to Do -------------------->
-      <div class="package-deadlines line">
+      <div class="package-deadlines line" outsideTooltip="Срок реализации или вполнения" outsideTooltipDescription="Время доставки - это количество времени, которое вы должны проработать с посылкой, начиная с момента, когда покупатель размещает заказ.
+      Установите время доставки, которое имеет смысл для вас, основываясь на совокупном времени, которое у вас уходит на создание каждой части пакета." placement="right">
         <div class="deadline-title title">
           <p>
             Сроки (дней)
@@ -87,7 +91,7 @@
       </div>
 
       <!-------------------- packages changes -------------------->
-      <div class="packages-changes line">
+      <div class="packages-changes line" outsideTooltip="Правки" outsideTooltipDescription="Выберите количество правок, которые вы предлагаете в этом пакете." placement="right">
         <div class="packages-change title">
           <p>Кол-во правок</p>
         </div>
@@ -118,8 +122,8 @@
         </div>
       </div>
       <!--------------------add options -------------------->
-      <form #f="ngForm" class="package-options">
-        <div class="added-option line" *ngFor="let arrayItem of userService.main_options; let i = index">
+      <form #f="ngForm" class="package-options" >
+        <div class="added-option line" *ngFor="let arrayItem of userService.main_options; let i = index" outsideTooltip="Дополнительная опция" outsideTooltipDescription="Вы добавили опцию, дайте ей название и отметьте галочкой, чтобы покупатель видел  какому пакету услуг Вы относите данну опцию. " placement="right">
           <div class="option-title" [ngClass]="{ 'field-required': mainOptonTitle.invalid && submited }">
             <div class="input-wrap">
               <input type="text" [(ngModel)]="userService.main_options[i].title" required #mainOptonTitle="ngModel" name="main_option_title_{{i}}" placeholder="Название опции" maxlength="15">
@@ -132,7 +136,9 @@
             <label for="{{ package }}_{{ i }}"></label>
           </div>
         </div>
-        <div class="add-option " *ngIf=" !userService.main_options || userService.main_options.length < 10">
+        <div class="add-option " *ngIf=" !userService.main_options || userService.main_options.length < 10" outsideTooltip="Добавьте разные опции к заказу" outsideTooltipDescription="Это может быть срочность или повышенный объём заказа, или сопутствующие услуги 
+        ( напр., “Подберу изображение к статье”, “Предварительный аудит сайта”, “Плюс три черновых варианта лого на выбор”). 
+        Добавление в услуге опций позволит разнообразить Ваше предложение и увеличит среднюю стоимость заказа." placement="right">
 
           <button [disabled]="!f.valid" class="add btn-third" (click)="addMainOptin()">
             <i class="material-icons">
