--- a/src/app/chat/components/project-breef-filling/project-brief-filling.component.html
+++ b/src/app/chat/components/project-breef-filling/project-brief-filling.component.html
@@ -1,15 +1,15 @@
 <div class="wrapper" *ngIf="offerBrief">
-  <section class="title">
-    Брииф
-  </section>
-  <section class="brief">
-    <h3 class="title">
-      <a href="/">Дизайн веб-сайтов с мобильным адаптивом</a>
-    </h3>
+    <section class="title">
+        Брииф
+    </section>
+    <section class="brief">
+        <h3 class="title">
+            <a href="/">Дизайн веб-сайтов с мобильным адаптивом</a>
+        </h3>
 
-    <form class="questions" [formGroup]="briefForm" >
-      <div class="question-item {{ briefItem.answer_type }}" *ngFor="let briefItem of offerBrief, let i = index"  >
-        <label  class="question-title">
+        <form class="questions" [formGroup]="briefForm">
+            <div class="question-item {{ briefItem.answer_type }}" *ngFor="let briefItem of offerBrief, let i = index">
+                <label class="question-title">
           {{i+1}}. {{ briefItem.title }}. <span *ngIf="briefItem.answer_required === '1'" [ngClass]="{'required': briefForm.controls[briefItem.title].invalid && submitted  }" >(Поле обязательное до заполнения)
           </span>
         </label >
@@ -31,31 +31,30 @@
               [type]="briefItem.multi_answers === 0? 'radio': 'checkbox'">
 
              <label for="{{i + '-' + j}}">{{ variant.answer }}</label>
-              </li>
-            </ul>
-          </fieldset>
+                </li>
+                </ul>
+                </fieldset>
 
-        </div>
-      </div>
-      <div class="btns">
-        <button class="btn-sec" (click)="deleteBrief()">отменить</button>
-        <button class="btn" (click)="sendBrief()">отправить</button>
-      </div>
-    </form>
-  </section>
+            </div>
+</div>
+<div class="btns">
+    <button class="btn-sec" (click)="deleteBrief()">отменить</button>
+    <button class="btn" (click)="sendBrief()">отправить</button>
+</div>
+</form>
+</section>
 
-  <div class="error-popup" *ngIf="exitFromBriefPopUpVisible">
+<div class="error-popup" *ngIf="exitFromBriefPopUpVisible">
     <span class="hide" (click)="returnToBrief()"></span>
     <div class="icon"></div>
     <div class="info">
-      <p class="title">Вы не заполнили бриф до конца,
-        мы не можем его сохранить</p>
-      <p class="description">Экономте своё время, для того, чтобы Вам заново не заполнять бриф, дозаполните его сейчас  </p>
+        <p class="title">Вы не заполнили бриф до конца, мы не можем его сохранить</p>
+        <p class="description">Экономте своё время, для того, чтобы Вам заново не заполнять бриф, дозаполните его сейчас </p>
     </div>
     <div class="controls">
-      <button class="exit-brief" (click)="confirmDeleteBrief()"> <span>отказаться</span></button>
-      <button class="return-to-brief" (click)="returnToBrief()"> <span>заполнить</span></button>
+        <button class="exit-brief" (click)="confirmDeleteBrief()"> <span>отказаться</span></button>
+        <button class="return-to-brief" (click)="returnToBrief()"> <span>заполнить</span></button>
     </div>
-  </div>
+</div>
 
 </div>
