--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
@@ -1,106 +1,93 @@
 <div class="step-wrapper">
-  <form #form="ngForm" (ngSubmit)="nextStep(form)">
-    <h3>5. Бриф</h3>
+    <form #form="ngForm" (ngSubmit)="nextStep(form)">
+        <h3>5. Бриф</h3>
 
-    <h5>Кратко опишите, что вам требуется для работы</h5>
-    <div class="brief-item" *ngFor="let item of userService.offerBrief; let i = index"
-      [style.border]="showedItem !== i+1 && !brief.valid ? '1px solid #f44336': 'none'"
-      [ngClass]="{ hiddenItem: showedItem !== i+1 }">
-      <form #brief="ngForm">
-        <div class="el">
-          <h6>{{ i+1 }}. <ng-container *ngIf="userService.offerBrief[i].title">
-              {{ userService.offerBrief[i].title.substr(0, 55) }}</ng-container> <span
-              *ngIf="userService.offerBrief[i].title && userService.offerBrief[i].title.length > 54">...</span>
-          </h6>
-          <div class="item-options">
-            <button type="button" class="change"><i class="material-icons create"
+        <h5>Кратко опишите, что вам требуется для работы</h5>
+        <div class="brief-item" *ngFor="let item of userService.offerbrief; let i = index" [style.border]="showedItem !== i+1 && !brief.valid ? '1px solid #f44336': 'none'" [ngClass]="{ hiddenItem: showedItem !== i+1 }">
+            <form #brief="ngForm">
+                <div class="el">
+                    <h6>{{ i+1 }}.
+                        <ng-container *ngIf="userService.offerbrief[i].briefTitle">
+                            {{ userService.offerbrief[i].briefTitle.substr(0, 55) }}</ng-container> <span *ngIf="userService.offerbrief[i].briefTitle && userService.offerbrief[i].briefTitle.length > 54">...</span>
+                    </h6>
+                    <div class="item-options">
+                        <button type="button" class="change"><i class="material-icons create"
                 (click)="changeBriefItem(i+1)">create</i></button>
-            <button type="button" class="delete"><i class="material-icons delete-pack"
+                        <button type="button" class="delete"><i class="material-icons delete-pack"
                 (click)="deleteBriefItem(i)">delete</i></button>
-          </div>
-          <div class="fields">
-            <div class="title" [style.borderColor]="(title.invalid && submitted )? '#f44336' : '#dce0e6'">
-              <textarea name="briefTtitle-{{i}}" placeholder="Напр., спецификации, брендбук, размеры, фотоматериалы"
-                required #title="ngModel" maxlength="500" [(ngModel)]="userService.offerBrief[i].title"></textarea>
-              <span class="title-controls" *ngIf="title.pristine"> 500 символов</span>
-              <span class="title-controls"
-                *ngIf="userService.offerBrief[i].title && userService.offerBrief[i].title.length < 500">
-                {{userService.offerBrief[i].title.length}}/500 символов</span>
-              <span class="title-controls"
-                *ngIf="userService.offerBrief[i].title && userService.offerBrief[i].title.length >= 500">
+                    </div>
+                    <div class="fields">
+                        <div class="title" [style.borderColor]="(title.invalid && submitted )? '#f44336' : '#dce0e6'">
+                            <textarea name="briefTtitle-{{i}}" placeholder="Напр., спецификации, брендбук, размеры, фотоматериалы" required #title="ngModel" maxlength="500" [(ngModel)]="userService.offerbrief[i].briefTitle"></textarea>
+                            <span class="title-controls" *ngIf="title.pristine"> 500 символов</span>
+                            <span class="title-controls" *ngIf="userService.offerbrief[i].briefTitle && userService.offerbrief[i].briefTitle.length < 500">
+                {{userService.offerbrief[i].briefTitle.length}}/500 символов</span>
+                            <span class="title-controls" *ngIf="userService.offerbrief[i].briefTitle && userService.offerbrief[i].briefTitle.length >= 500">
                 достаточно</span>
-            </div>
-            <div class="options service-selects">
-              <label for="answer-type">Тип ответа</label>
-              <mat-form-field appearance="outline">
-                <mat-select id="answer-type-{{i}}" name="answer_type{{i))" required
-            [(ngModel)]="userService.offerBrief[i].answer_type" (ngModelChange)="onFiltersChange($event, i)">
-            <mat-option [value]="type.value" *ngFor="let type of answerTypes"> {{ type.name }}</mat-option>
-                </mat-select>
-              </mat-form-field>
+                        </div>
+                        <div class="options service-selects">
+                            <label for="answer-type">Тип ответа</label>
+                            <mat-form-field appearance="outline">
+                                <mat-select id="answer-type-{{i}}" name="answer_type{{i))" required [(ngModel)]="userService.offerbrief[i].briefAnswerType" (ngModelChange)="onFiltersChange($event, i)">
+                                    <mat-option [value]="type.value" *ngFor="let type of answerTypes"> {{ type.name }}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
 
-              <input type="checkbox" [(ngModel)]="userService.offerBrief[i].answer_required"
-                  class="tgl tgl-classic" name="requered-{{i}}" id="required-{{i}}">
-                  <label for="required-{{i}}"></label>
-                  <span>Ответ обязательный</span>
-            </div>
-            <div class="multi" *ngIf="userService.offerBrief[i].answer_type === 'radio'">
-              <div class="brief-question-item"
-                [style.borderColor]="checkboxFields.invalid && submitted && userService.offerBrief[i].answer_type === 'radio'? '#f44336' : '#dce0e6'"
-                *ngFor="let el of userService.offerBrief[i].answers, let j = index">
+                            <input type="checkbox" [(ngModel)]="userService.offerbrief[i].briefAnwerRequired" class="tgl tgl-classic" name="requered-{{i}}" id="required-{{i}}">
+                            <label for="required-{{i}}"></label>
+                            <span>Ответ обязательный</span>
+                        </div>
+                        <div class="multi" *ngIf="userService.offerbrief[i].briefAnswerType === 'radio'">
+                            <div class="brief-question-item" [style.borderColor]="checkboxFields.invalid && submitted && userService.offerbrief[i].briefAnswerType === 'radio'? '#f44336' : '#dce0e6'" *ngFor="let el of userService.offerbrief[i].briefAnswerVariants, let j = index">
 
-                <input type="text" [(ngModel)]="userService.offerBrief[i].answers[j].answer"
-                  #checkboxFields="ngModel" name="answerVariant-{{j}}" placeholder="Дополнительный ответ" required
-                  maxlength="80">
-                <button class="clear"> <i class="material-icons"
-                    *ngIf="userService.offerBrief[i].answers.length > 2" (click)="removeAnswer(i , j)">
+                                <input type="text" [(ngModel)]="userService.offerbrief[i].briefAnswerVariants[j].answerVariant" #checkboxFields="ngModel" name="answerVariant-{{j}}" placeholder="Дополнительный ответ" required maxlength="80">
+                                <button class="clear"> <i class="material-icons"
+                    *ngIf="userService.offerbrief[i].briefAnswerVariants.length > 2" (click)="removeAnswer(i , j)">
                     close
                   </i></button>
-              </div>
-              <div class="add-question">
-                <button class="add btn-third" type="button" [disabled]="form.invalid" (click)="addBriefAnswers(i)">
+                            </div>
+                            <div class="add-question">
+                                <button class="add btn-third" type="button" [disabled]="form.invalid" (click)="addBriefAnswers(i)">
                   <i class="material-icons">
                     add_circle_outline
                   </i>
                   <span>Добавить еще ответ</span>
 
                 </button>
-                <div class="comment">
-                  <input type="checkbox" [(ngModel)]="userService.offerBrief[i].multi_answers"
-                    class="tgl tgl-classic" name="multi-{{i}}" checkbox="" id="multi-answer">
-                  <label for="multi-answer"></label>
-                  <p>
-                    Разрешить более одного ответа на вопрос
-                    <span>
+                                <div class="comment">
+                                    <input type="checkbox" [(ngModel)]="userService.offerbrief[i].briefMultiAnswers" class="tgl tgl-classic" name="multi-{{i}}" checkbox="" id="multi-answer">
+                                    <label for="multi-answer"></label>
+                                    <p>
+                                        Разрешить более одного ответа на вопрос
+                                        <span>
                       (покупатель сможет отметить несколько вариантов)
                     </span>
-                  </p>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="item-controls">
+                            <button class="btn-sec" type="button" [disabled]="userService.offerbrief.length === 1" (click)="showedItem = null">отменить</button>
+                            <button class="btn" type="button" [disabled]="form.invalid" (click)="showedItem = null">Добавить</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="item-controls">
-              <button class="btn-sec" type="button" [disabled]="userService.offerBrief.length === 1"
-                (click)="showedItem = null">отменить</button>
-              <button class="btn" type="button" [disabled]="form.invalid" (click)="showedItem = null">Добавить</button>
-            </div>
-          </div>
+            </form>
         </div>
-
-      </form>
-    </div>
-    <div class="add-brief">
-      <button class="add btn-third" type="button" [disabled]="!form.valid" (click)="addBriefItem()">
+        <div class="add-brief">
+            <button class="add btn-third" type="button" [disabled]="!form.valid" (click)="addBriefItem()">
         <i class="material-icons">
           add_circle_outline
         </i>
         <span>Добавить требование</span>
       </button>
-    </div>
+        </div>
 
-    <div class="form-butons">
-      <button class="back" type="button">выйти</button>
-      <button class="save" type="submit">сохранить и продолжить</button>
-    </div>
-  </form>
+        <div class="form-butons">
+            <button class="back" type="button">выйти</button>
+            <button class="save" type="submit">сохранить и продолжить</button>
+        </div>
+    </form>
 </div>
