--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -116,12 +116,12 @@ form::ng-deep {
         content: "";
         position: absolute;
         left: -9px;
-        top: 8px;
+        top: 50%;
         width: 22px;
         height: 22px;
         background: #ffffff;
-        -webkit-transform: rotate(47deg);
-        transform: rotate(47deg);
+        -webkit-transform: translateY(-50%) rotate(47deg);
+        transform: translateY(-50%) rotate(47deg);
         box-sizing: border-box;
         z-index: -1;
       }
@@ -132,9 +132,10 @@ form::ng-deep {
         font-size: 14px;
         line-height: 18px;
         color: #000000;
-        margin: 0 0 12px;
+        margin: 0;
         background: transparent;
         border: none;
+        padding: 0px 0 0 12px;
       }
 
       .popover-body {
